doc: create list receivers swagger doc
